Change path of aboutme page
    Index.html will be used to serve dynamic pages. So previous index.html has been named as aboutme.html and so do related resource.

--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>About Me</title>
+    <title>Jsite</title>
 </head>
 <body>
-    <h1>Jacty</h1>
-    <p>Hi~ there! I am Jacty, a front end developer, who is working very hard to build my own tool chain and developing system by reading source code and learning methodology from it. Apart from that, I am also a speaking language learner which can speak English, Chinese, my native language and a tiny bit of Spanish which I am going to study in Spain probably next year. Different languages can help me to find different personalities from myself which is really interesting and mind-blowing sometime.</p>
-    <section>
-        <h2>Projects</h2>
-        <ul>
-            <li>vDom: a personal version vDom which supposed to used in my own tool chain.</li>
-        </ul>
-    </section>
+    <h1>Jsite</h1>
+    <p>This is a page used to serve dynamic render pages.</p>
 </body>
 <script type="module" src='/assets/js/index.js'></script>
 </html>
