Update environment to compile JSX files.

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,10 @@
     <title>Jsite</title>
 </head>
 <body>
+    <div id='root'>
     <h1>Jsite</h1>
     <p>This is a page used to serve dynamic render pages.</p>
+    </div>
 </body>
 <script type="module" src='/assets/js/index.js'></script>
 </html>
