--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,7 @@
 </head>
 <body>
     <div id='root'>
-    <h1>Jsite</h1>
-    <p>This is a page used to serve dynamic render pages.</p>
-    </div>
+    <!--Jsite:This is a page used to serve dynamic render pages.-->
 </body>
 <script type="module" src='/assets/js/index.js'></script>
 </html>
