--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Jsite</title>
 </head>
 <body>
-    <div id='root'></div>
+    <div id='root'>demo</div>
     <!--Jsite:This is a page used to serve dynamic render pages.-->
 </body>
 <script type="module" src='/assets/js/index.js'></script>
